#This file is part of t8code
#Non-recursive Makefile.am in test
#Included from toplevel directory

t8code_googletest_programs = \
  test/t8_gtest_cmesh_bcast \
  test/t8_schemes/t8_gtest_nca \
  test/t8_schemes/t8_gtest_pyra_connectivity \
  test/t8_schemes/t8_gtest_pyra_face_neigh \
  test/t8_geometry/t8_gtest_geometry_occ \
  test/t8_gtest_eclass \
  test/t8_gtest_vec \
  test/t8_gtest_refcount \
  test/t8_gtest_occ_linkage \
  test/t8_gtest_version \
  test/t8_schemes/t8_gtest_init_linear_id \
  test/t8_gtest_basics \
  test/t8_schemes/t8_gtest_ancestor \
  test/t8_cmesh/t8_gtest_hypercube \
  test/t8_cmesh/t8_gtest_cmesh_copy \
  test/t8_schemes/t8_gtest_element_count_leafs \
  test/t8_geometry/t8_gtest_geometry \
  test/t8_schemes/t8_gtest_descendant \
  test/t8_schemes/t8_gtest_find_parent \
  test/t8_cmesh/t8_gtest_cmesh_face_is_boundary \
  test/t8_cmesh/t8_gtest_cmesh_partition \
  test/t8_forest/t8_gtest_element_volume \
  test/t8_cmesh/t8_gtest_multiple_attributes \
  test/t8_schemes/t8_gtest_successor \
  test/t8_forest/t8_gtest_search \
  test/t8_gtest_netcdf_linkage \
  test/t8_forest/t8_gtest_element_general_function \
  test/t8_gtest_vtk_linkage \
  test/t8_data/t8_gtest_shmem \
  test/t8_forest/t8_gtest_half_neighbors \
  test/t8_forest/t8_gtest_find_owner \
  test/t8_schemes/t8_gtest_pyra_face_descendant \
  test/t8_geometry/t8_gtest_point_inside \
  test/t8_forest/t8_gtest_user_data \
  test/t8_forest/t8_gtest_transform \
  test/t8_forest/t8_gtest_ghost_exchange \
  test/t8_forest/t8_gtest_ghost_and_owner

test_t8_gtest_cmesh_bcast_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_cmesh/t8_gtest_bcast.cxx

test_t8_schemes_t8_gtest_nca_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_nca.cxx

test_t8_schemes_t8_gtest_pyra_connectivity_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_pyra_connectivity.cxx

test_t8_schemes_t8_gtest_pyra_face_neigh_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_pyra_face_neigh.cxx

test_t8_geometry_t8_gtest_geometry_occ_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_geometry/t8_gtest_geometry_occ.cxx

test_t8_gtest_eclass_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_gtest_eclass.cxx

test_t8_gtest_vec_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_gtest_vec.cxx

test_t8_gtest_refcount_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_gtest_refcount.cxx

test_t8_gtest_occ_linkage_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_gtest_occ_linkage.cxx

test_t8_gtest_version_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_gtest_version.cxx

test_t8_schemes_t8_gtest_init_linear_id_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_init_linear_id.cxx

test_t8_gtest_basics_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_gtest_basics.cxx

test_t8_schemes_t8_gtest_ancestor_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_ancestor.cxx

test_t8_cmesh_t8_gtest_hypercube_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_cmesh/t8_gtest_hypercube.cxx

test_t8_cmesh_t8_gtest_cmesh_copy_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_cmesh/t8_gtest_cmesh_copy.cxx 

test_t8_schemes_t8_gtest_element_count_leafs_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_element_count_leafs.cxx

test_t8_geometry_t8_gtest_geometry_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_geometry/t8_gtest_geometry.cxx

test_t8_schemes_t8_gtest_descendant_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_descendant.cxx

test_t8_schemes_t8_gtest_find_parent_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_find_parent.cxx

test_t8_cmesh_t8_gtest_cmesh_face_is_boundary_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_cmesh/t8_gtest_cmesh_face_is_boundary.cxx

test_t8_cmesh_t8_gtest_cmesh_partition_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_cmesh/t8_gtest_cmesh_partition.cxx
  
test_t8_forest_t8_gtest_element_volume_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_element_volume.cxx

test_t8_cmesh_t8_gtest_multiple_attributes_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_cmesh/t8_gtest_multiple_attributes.cxx

test_t8_schemes_t8_gtest_successor_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_successor.cxx

test_t8_forest_t8_gtest_search_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_search.cxx

test_t8_gtest_netcdf_linkage_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_gtest_netcdf_linkage.cxx

test_t8_forest_t8_gtest_element_general_function_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_element_general_function.cxx

test_t8_gtest_vtk_linkage_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_gtest_vtk_linkage.cxx

test_t8_data_t8_gtest_shmem_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_data/t8_gtest_shmem.cxx

test_t8_forest_t8_gtest_half_neighbors_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_half_neighbors.cxx

test_t8_forest_t8_gtest_find_owner_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_find_owner.cxx

test_t8_schemes_t8_gtest_pyra_face_descendant_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_pyra_face_descendant.cxx

test_t8_geometry_t8_gtest_point_inside_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_geometry/t8_gtest_point_inside.cxx

test_t8_forest_t8_gtest_user_data_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_user_data.cxx

test_t8_forest_t8_gtest_transform_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_transform.cxx

test_t8_forest_t8_gtest_ghost_exchange_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_ghost_exchange.cxx

test_t8_forest_t8_gtest_ghost_and_owner_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_ghost_and_owner.cxx


#define ld and cpp flags for all targets
target_ld_add = $(LDADD) test/libgtest.la
target_ld_flags = $(AM_LDFLAGS) -pthread
target_cpp_flags = $(AM_CPPFLAGS) -I$(top_srcdir)/thirdparty/googletest-mpi/ \
  -pthread \
  -std=c++11
#flags to add when we compile with mpi
target_mpi_cpp_flags = $(target_mpi_cpp_flags)

test_t8_gtest_cmesh_bcast_LDADD = $(target_ld_add)
test_t8_gtest_cmesh_bcast_LDFLAGS = $(target_ld_flags)
test_t8_gtest_cmesh_bcast_CPPFLAGS = $(target_cpp_flags)

test_t8_schemes_t8_gtest_nca_LDADD = $(target_ld_add)
test_t8_schemes_t8_gtest_nca_LDFLAGS = $(target_ld_flags)
test_t8_schemes_t8_gtest_nca_CPPFLAGS = $(target_cpp_flags)

test_t8_schemes_t8_gtest_pyra_connectivity_LDADD = $(target_ld_add)
test_t8_schemes_t8_gtest_pyra_connectivity_LDFLAGS = $(target_ld_flags)
test_t8_schemes_t8_gtest_pyra_connectivity_CPPFLAGS = $(target_cpp_flags)

test_t8_schemes_t8_gtest_pyra_face_neigh_LDADD = $(target_ld_add)
test_t8_schemes_t8_gtest_pyra_face_neigh_LDFLAGS = $(target_ld_flags)
test_t8_schemes_t8_gtest_pyra_face_neigh_CPPFLAGS = $(target_cpp_flags)

test_t8_geometry_t8_gtest_geometry_occ_LDADD = $(target_ld_add)
test_t8_geometry_t8_gtest_geometry_occ_LDFLAGS = $(target_ld_flags)
test_t8_geometry_t8_gtest_geometry_occ_CPPFLAGS = $$(target_cpp_flags)

test_t8_gtest_eclass_LDADD = $(target_ld_add)
test_t8_gtest_eclass_LDFLAGS = $(target_ld_flags)
test_t8_gtest_eclass_CPPFLAGS = $(target_cpp_flags)

test_t8_gtest_vec_LDADD = $(target_ld_add)
test_t8_gtest_vec_LDFLAGS = $(target_ld_flags)
test_t8_gtest_vec_CPPFLAGS = $(target_cpp_flags)

test_t8_gtest_refcount_LDADD = $(target_ld_add)
test_t8_gtest_refcount_LDFLAGS = $(target_ld_flags)
test_t8_gtest_refcount_CPPFLAGS = $(target_cpp_flags)

test_t8_gtest_occ_linkage_LDADD = $(target_ld_add)
test_t8_gtest_occ_linkage_LDFLAGS = $(target_ld_flags)
test_t8_gtest_occ_linkage_CPPFLAGS = $(target_cpp_flags)

test_t8_gtest_version_LDADD = $(target_ld_add)
test_t8_gtest_version_LDFLAGS = $(target_ld_flags)
test_t8_gtest_version_CPPFLAGS = $(target_cpp_flags)

test_t8_schemes_t8_gtest_init_linear_id_LDADD = $(target_ld_add)
test_t8_schemes_t8_gtest_init_linear_id_LDFLAGS = $(target_ld_flags)
test_t8_schemes_t8_gtest_init_linear_id_CPPFLAGS = $(target_cpp_flags)

test_t8_gtest_basics_LDADD = $(target_ld_add)
test_t8_gtest_basics_LDFLAGS = $(target_ld_flags)
test_t8_gtest_basics_CPPFLAGS = $(target_cpp_flags)

test_t8_schemes_t8_gtest_ancestor_LDADD = $(target_ld_add)
test_t8_schemes_t8_gtest_ancestor_LDFLAGS = $(target_ld_flags)
test_t8_schemes_t8_gtest_ancestor_CPPFLAGS = $(target_cpp_flags)

test_t8_cmesh_t8_gtest_hypercube_LDADD = $(target_ld_add)
test_t8_cmesh_t8_gtest_hypercube_LDFLAGS = $(target_ld_flags)
test_t8_cmesh_t8_gtest_hypercube_CPPFLAGS = $(target_cpp_flags)

test_t8_cmesh_t8_gtest_cmesh_copy_LDADD = $(target_ld_add)
test_t8_cmesh_t8_gtest_cmesh_copy_LDFLAGS = $(target_ld_flags)
test_t8_cmesh_t8_gtest_cmesh_copy_CPPFLAGS = $(target_cpp_flags)

test_t8_schemes_t8_gtest_element_count_leafs_LDADD = $(target_ld_add)
test_t8_schemes_t8_gtest_element_count_leafs_LDFLAGS = $(target_ld_flags)
test_t8_schemes_t8_gtest_element_count_leafs_CPPFLAGS = $(target_cpp_flags)

test_t8_geometry_t8_gtest_geometry_LDADD = $(target_ld_add)
test_t8_geometry_t8_gtest_geometry_LDFLAGS = $(target_ld_flags)
test_t8_geometry_t8_gtest_geometry_CPPFLAGS = $(target_cpp_flags)

test_t8_schemes_t8_gtest_descendant_LDADD = $(target_ld_add)
test_t8_schemes_t8_gtest_descendant_LDFLAGS = $(target_ld_flags)
test_t8_schemes_t8_gtest_descendant_CPPFLAGS = $(target_cpp_flags)

test_t8_schemes_t8_gtest_find_parent_LDADD = $(target_ld_add)
test_t8_schemes_t8_gtest_find_parent_LDFLAGS = $(target_ld_flags)
test_t8_schemes_t8_gtest_find_parent_CPPFLAGS = $(target_cpp_flags)

test_t8_cmesh_t8_gtest_cmesh_face_is_boundary_LDADD = $(target_ld_add)
test_t8_cmesh_t8_gtest_cmesh_face_is_boundary_LDFLAGS = $(target_ld_flags)
test_t8_cmesh_t8_gtest_cmesh_face_is_boundary_CPPFLAGS = $(target_cpp_flags)

test_t8_cmesh_t8_gtest_cmesh_partition_LDADD = $(target_ld_add)
test_t8_cmesh_t8_gtest_cmesh_partition_LDFLAGS = $(target_ld_flags)
test_t8_cmesh_t8_gtest_cmesh_partition_CPPFLAGS = $(target_cpp_flags)

test_t8_forest_t8_gtest_element_volume_LDADD = $(target_ld_add)
test_t8_forest_t8_gtest_element_volume_LDFLAGS = $(target_ld_flags)
test_t8_forest_t8_gtest_element_volume_CPPFLAGS = $(target_cpp_flags)

test_t8_cmesh_t8_gtest_multiple_attributes_LDADD = $(target_ld_add)
test_t8_cmesh_t8_gtest_multiple_attributes_LDFLAGS = $(target_ld_flags)
test_t8_cmesh_t8_gtest_multiple_attributes_CPPFLAGS = $(target_cpp_flags)

test_t8_schemes_t8_gtest_successor_LDADD = $(target_ld_add)
test_t8_schemes_t8_gtest_successor_LDFLAGS = $(target_ld_flags)
test_t8_schemes_t8_gtest_successor_CPPFLAGS = $(target_cpp_flags)

test_t8_forest_t8_gtest_search_LDADD = $(target_ld_add)
test_t8_forest_t8_gtest_search_LDFLAGS = $(target_ld_flags)
test_t8_forest_t8_gtest_search_CPPFLAGS = $(target_cpp_flags)

test_t8_gtest_netcdf_linkage_LDADD = $(target_ld_add)
test_t8_gtest_netcdf_linkage_LDFLAGS = $(target_ld_flags)
test_t8_gtest_netcdf_linkage_CPPFLAGS = $(target_cpp_flags)

test_t8_forest_t8_gtest_element_general_function_LDADD = $(target_ld_add)
test_t8_forest_t8_gtest_element_general_function_LDFLAGS = $(target_ld_flags)
test_t8_forest_t8_gtest_element_general_function_CPPFLAGS = $(target_cpp_flags)

test_t8_gtest_vtk_linkage_LDADD = $(target_ld_add)
test_t8_gtest_vtk_linkage_LDFLAGS = $(target_ld_flags)
test_t8_gtest_vtk_linkage_CPPFLAGS = $(target_cpp_flags)

test_t8_data_t8_gtest_shmem_LDADD = $(target_ld_add)
test_t8_data_t8_gtest_shmem_LDFLAGS = $(target_ld_flags)
test_t8_data_t8_gtest_shmem_CPPFLAGS = $(target_cpp_flags)

test_t8_forest_t8_gtest_half_neighbors_LDADD = $(target_ld_add)
test_t8_forest_t8_gtest_half_neighbors_LDFLAGS = $(target_ld_flags)
test_t8_forest_t8_gtest_half_neighbors_CPPFLAGS = $(target_cpp_flags)

test_t8_forest_t8_gtest_find_owner_LDADD = $(target_ld_add)
test_t8_forest_t8_gtest_find_owner_LDFLAGS = $(target_ld_flags)
test_t8_forest_t8_gtest_find_owner_CPPFLAGS = $(target_cpp_flags)

test_t8_schemes_t8_gtest_pyra_face_descendant_LDADD = $(target_ld_add)
test_t8_schemes_t8_gtest_pyra_face_descendant_LDFLAGS = $(target_ld_flags)
test_t8_schemes_t8_gtest_pyra_face_descendant_CPPFLAGS = $(target_cpp_flags)

test_t8_geometry_t8_gtest_point_inside_LDADD = $(target_ld_add)
test_t8_geometry_t8_gtest_point_inside_LDFLAGS = $(target_ld_flags)
test_t8_geometry_t8_gtest_point_inside_CPPFLAGS = $(target_cpp_flags)

test_t8_forest_t8_gtest_user_data_LDADD = $(target_ld_add)
test_t8_forest_t8_gtest_user_data_LDFLAGS = $(target_ld_flags)
test_t8_forest_t8_gtest_user_data_CPPFLAGS = $(target_cpp_flags)

test_t8_forest_t8_gtest_transform_LDADD = $(target_ld_add)
test_t8_forest_t8_gtest_transform_LDFLAGS = $(target_ld_flags)
test_t8_forest_t8_gtest_transform_CPPFLAGS = $(target_cpp_flags)

test_t8_forest_t8_gtest_ghost_exchange_LDADD = $(target_ld_add)
test_t8_forest_t8_gtest_ghost_exchange_LDFLAGS = $(target_ld_flags)
test_t8_forest_t8_gtest_ghost_exchange_CPPFLAGS = $(target_cpp_flags)

test_t8_forest_t8_gtest_ghost_and_owner_LDADD = $(target_ld_add)
test_t8_forest_t8_gtest_ghost_and_owner_LDFLAGS = $(target_ld_flags)
test_t8_forest_t8_gtest_ghost_and_owner_CPPFLAGS = $(target_cpp_flags)


# If we did not configure t8code with MPI we need to build Googletest
# without MPI support.
if !T8_ENABLE_MPI
test_t8_gtest_cmesh_bcast_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_nca_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_pyra_connectivity_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_pyra_face_neigh_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_geometry_t8_gtest_geometry_occ_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_gtest_eclass_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_gtest_vec_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_gtest_refcount_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_gtest_occ_linkage_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_gtest_version_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_init_linear_id_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_gtest_basics_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_ancestor_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_cmesh_t8_gtest_hypercube_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_cmesh_t8_gtest_cmesh_copy_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_element_count_leafs_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_geometry_t8_gtest_geometry_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_descendant_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_find_parent_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_cmesh_t8_gtest_cmesh_face_is_boundary_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_cmesh_t8_gtest_cmesh_partition_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_forest_t8_gtest_element_volume_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_cmesh_t8_gtest_multiple_attributes_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_successor_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_forest_t8_gtest_search_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_gtest_netcdf_linkage_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_forest_t8_gtest_element_general_function_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_gtest_vtk_linkage_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_data_t8_gtest_shmem_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_forest_t8_gtest_half_neighbors_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_forest_t8_gtest_find_owner_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_pyra_face_descendant_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_geometry_t8_gtest_point_inside_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_forest_t8_gtest_user_data_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_forest_t8_gtest_transform_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_forest_t8_gtest_ghost_exchange_CPPFLAGS += $(target_mpi_cpp_flags)
test_t8_forest_t8_gtest_ghost_and_owner_CPPFLAGS += $(target_mpi_cpp_flags)
endif

# Build Googletest library
check_LTLIBRARIES = test/libgtest.la
test_libgtest_la_SOURCES = thirdparty/googletest-mpi/gtest/gtest-all.cc
test_libgtest_la_CPPFLAGS = -I$(top_srcdir)/thirdparty/googletest-mpi -std=c++11
# If we did not configure t8code with MPI we need to build Googletest
# without MPI support.
if !T8_ENABLE_MPI
test_libgtest_la_CPPFLAGS += $(target_mpi_cpp_flags)
endif
test_libgtest_la_LDFLAGS = -pthread


TESTS += $(t8code_googletest_programs)
check_PROGRAMS += $(t8code_googletest_programs)
