#This file is part of t8code
#Non-recursive Makefile.am in test
#Included from toplevel directory

t8code_googletest_programs = \
  test/t8_gtest_cmesh_bcast \
  test/t8_schemes/t8_gtest_nca \
  test/t8_schemes/t8_gtest_pyra_connectivity \
  test/t8_schemes/t8_gtest_face_neigh \
  test/t8_geometry/t8_gtest_geometry_occ \
  test/t8_gtest_eclass \
  test/t8_gtest_vec \
  test/t8_gtest_mat \
  test/t8_gtest_refcount \
  test/t8_gtest_occ_linkage \
  test/t8_gtest_version \
  test/t8_schemes/t8_gtest_init_linear_id \
  test/t8_gtest_basics \
  test/t8_schemes/t8_gtest_ancestor \
  test/t8_cmesh/t8_gtest_hypercube \
  test/t8_cmesh/t8_gtest_cmesh_copy \
  test/t8_schemes/t8_gtest_element_count_leafs \
  test/t8_schemes/t8_gtest_element_ref_coords \
  test/t8_geometry/t8_gtest_geometry \
  test/t8_schemes/t8_gtest_descendant \
  test/t8_schemes/t8_gtest_find_parent \
  test/t8_cmesh/t8_gtest_cmesh_face_is_boundary \
  test/t8_cmesh/t8_gtest_cmesh_partition \
  test/t8_cmesh/t8_gtest_cmesh_set_join_by_vertices \
  test/t8_forest/t8_gtest_element_volume \
  test/t8_cmesh/t8_gtest_multiple_attributes \
  test/t8_schemes/t8_gtest_successor \
  test/t8_forest/t8_gtest_search \
  test/t8_gtest_netcdf_linkage \
  test/t8_forest/t8_gtest_element_general_function \
  test/t8_gtest_vtk_linkage \
  test/t8_data/t8_gtest_shmem \
  test/t8_forest/t8_gtest_half_neighbors \
  test/t8_forest/t8_gtest_find_owner \
  test/t8_schemes/t8_gtest_face_descendant \
  test/t8_geometry/t8_gtest_point_inside \
  test/t8_forest/t8_gtest_user_data \
  test/t8_forest/t8_gtest_transform \
  test/t8_forest/t8_gtest_ghost_exchange \
  test/t8_forest/t8_gtest_ghost_exchange_stdvector \
  test/t8_forest/t8_gtest_ghost_and_owner \
  test/t8_IO/t8_gtest_vtk_reader \
  test/t8_forest_incomplete/t8_gtest_permute_hole \
  test/t8_forest_incomplete/t8_gtest_recursive \
  test/t8_forest_incomplete/t8_gtest_iterate_replace \
  test/t8_forest_incomplete/t8_gtest_empty_local_tree \
  test/t8_forest_incomplete/t8_gtest_empty_global_tree

test_t8_IO_t8_gtest_vtk_reader_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_IO/t8_gtest_vtk_reader.cxx

test_t8_gtest_cmesh_bcast_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_cmesh/t8_gtest_bcast.cxx

test_t8_schemes_t8_gtest_nca_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_nca.cxx

test_t8_schemes_t8_gtest_pyra_connectivity_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_pyra_connectivity.cxx

test_t8_schemes_t8_gtest_face_neigh_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_face_neigh.cxx

test_t8_geometry_t8_gtest_geometry_occ_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_geometry/t8_gtest_geometry_occ.cxx

test_t8_gtest_eclass_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_gtest_eclass.cxx

test_t8_gtest_vec_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_gtest_vec.cxx

test_t8_gtest_mat_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_gtest_mat.cxx

test_t8_gtest_refcount_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_gtest_refcount.cxx

test_t8_gtest_occ_linkage_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_gtest_occ_linkage.cxx

test_t8_gtest_version_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_gtest_version.cxx

test_t8_schemes_t8_gtest_init_linear_id_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_init_linear_id.cxx

test_t8_gtest_basics_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_gtest_basics.cxx

test_t8_schemes_t8_gtest_ancestor_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_ancestor.cxx

test_t8_cmesh_t8_gtest_hypercube_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_cmesh/t8_gtest_hypercube.cxx

test_t8_cmesh_t8_gtest_cmesh_copy_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_cmesh/t8_gtest_cmesh_copy.cxx 

test_t8_cmesh_t8_gtest_cmesh_set_join_by_vertices_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_cmesh/t8_gtest_cmesh_set_join_by_vertices.cxx 

test_t8_schemes_t8_gtest_element_count_leafs_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_element_count_leafs.cxx

test_t8_schemes_t8_gtest_element_ref_coords_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_element_ref_coords.cxx

test_t8_geometry_t8_gtest_geometry_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_geometry/t8_gtest_geometry.cxx

test_t8_schemes_t8_gtest_descendant_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_descendant.cxx

test_t8_schemes_t8_gtest_find_parent_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_find_parent.cxx

test_t8_cmesh_t8_gtest_cmesh_face_is_boundary_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_cmesh/t8_gtest_cmesh_face_is_boundary.cxx

test_t8_cmesh_t8_gtest_cmesh_partition_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_cmesh/t8_gtest_cmesh_partition.cxx
  
test_t8_forest_t8_gtest_element_volume_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_element_volume.cxx

test_t8_cmesh_t8_gtest_multiple_attributes_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_cmesh/t8_gtest_multiple_attributes.cxx

test_t8_schemes_t8_gtest_successor_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_successor.cxx

test_t8_forest_t8_gtest_search_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_search.cxx

test_t8_gtest_netcdf_linkage_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_gtest_netcdf_linkage.cxx

test_t8_forest_t8_gtest_element_general_function_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_element_general_function.cxx

test_t8_gtest_vtk_linkage_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_gtest_vtk_linkage.cxx

test_t8_data_t8_gtest_shmem_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_data/t8_gtest_shmem.cxx

test_t8_forest_t8_gtest_half_neighbors_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_half_neighbors.cxx

test_t8_forest_t8_gtest_find_owner_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_find_owner.cxx

test_t8_schemes_t8_gtest_face_descendant_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_schemes/t8_gtest_face_descendant.cxx

test_t8_geometry_t8_gtest_point_inside_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_geometry/t8_gtest_point_inside.cxx

test_t8_forest_t8_gtest_user_data_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_user_data.cxx

test_t8_forest_t8_gtest_transform_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_transform.cxx

test_t8_forest_t8_gtest_ghost_exchange_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_ghost_exchange.cxx

test_t8_forest_t8_gtest_ghost_exchange_stdvector_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_ghost_exchange_stdvector.cxx

test_t8_forest_t8_gtest_ghost_and_owner_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest/t8_gtest_ghost_and_owner.cxx

test_t8_forest_incomplete_t8_gtest_permute_hole_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest_incomplete/t8_gtest_permute_hole.cxx

test_t8_forest_incomplete_t8_gtest_recursive_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest_incomplete/t8_gtest_recursive.cxx

test_t8_forest_incomplete_t8_gtest_iterate_replace_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest_incomplete/t8_gtest_iterate_replace.cxx

test_t8_forest_incomplete_t8_gtest_empty_local_tree_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest_incomplete/t8_gtest_empty_local_tree.cxx

test_t8_forest_incomplete_t8_gtest_empty_global_tree_SOURCES = \
  test/t8_gtest_main.cxx \
  test/t8_forest_incomplete/t8_gtest_empty_global_tree.cxx

#define ld and cpp flags for all targets
t8_gtest_target_ld_add = $(LDADD) test/libgtest.la
t8_gtest_target_ld_flags = $(AM_LDFLAGS) -pthread
t8_gtest_target_cpp_flags = $(AM_CPPFLAGS) -I$(top_srcdir)/thirdparty/googletest-mpi/ \
  -pthread \
  -std=c++11
#flags to add when we compile with mpi
t8_gtest_target_mpi_cpp_flags = -DGTEST_HAS_MPI=0

test_t8_gtest_cmesh_bcast_LDADD = $(t8_gtest_target_ld_add)
test_t8_gtest_cmesh_bcast_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_gtest_cmesh_bcast_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_schemes_t8_gtest_nca_LDADD = $(t8_gtest_target_ld_add)
test_t8_schemes_t8_gtest_nca_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_schemes_t8_gtest_nca_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_schemes_t8_gtest_pyra_connectivity_LDADD = $(t8_gtest_target_ld_add)
test_t8_schemes_t8_gtest_pyra_connectivity_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_schemes_t8_gtest_pyra_connectivity_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_schemes_t8_gtest_face_neigh_LDADD = $(t8_gtest_target_ld_add)
test_t8_schemes_t8_gtest_face_neigh_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_schemes_t8_gtest_face_neigh_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_geometry_t8_gtest_geometry_occ_LDADD = $(t8_gtest_target_ld_add)
test_t8_geometry_t8_gtest_geometry_occ_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_geometry_t8_gtest_geometry_occ_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_gtest_eclass_LDADD = $(t8_gtest_target_ld_add)
test_t8_gtest_eclass_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_gtest_eclass_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_gtest_vec_LDADD = $(t8_gtest_target_ld_add)
test_t8_gtest_vec_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_gtest_vec_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_gtest_mat_LDADD = $(t8_gtest_target_ld_add)
test_t8_gtest_mat_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_gtest_mat_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_gtest_refcount_LDADD = $(t8_gtest_target_ld_add)
test_t8_gtest_refcount_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_gtest_refcount_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_gtest_occ_linkage_LDADD = $(t8_gtest_target_ld_add)
test_t8_gtest_occ_linkage_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_gtest_occ_linkage_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_gtest_version_LDADD = $(t8_gtest_target_ld_add)
test_t8_gtest_version_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_gtest_version_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_schemes_t8_gtest_init_linear_id_LDADD = $(t8_gtest_target_ld_add)
test_t8_schemes_t8_gtest_init_linear_id_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_schemes_t8_gtest_init_linear_id_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_gtest_basics_LDADD = $(t8_gtest_target_ld_add)
test_t8_gtest_basics_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_gtest_basics_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_schemes_t8_gtest_ancestor_LDADD = $(t8_gtest_target_ld_add)
test_t8_schemes_t8_gtest_ancestor_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_schemes_t8_gtest_ancestor_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_cmesh_t8_gtest_hypercube_LDADD = $(t8_gtest_target_ld_add)
test_t8_cmesh_t8_gtest_hypercube_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_cmesh_t8_gtest_hypercube_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_cmesh_t8_gtest_cmesh_copy_LDADD = $(t8_gtest_target_ld_add)
test_t8_cmesh_t8_gtest_cmesh_copy_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_cmesh_t8_gtest_cmesh_copy_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_cmesh_t8_gtest_cmesh_set_join_by_vertices_LDADD = $(t8_gtest_target_ld_add)
test_t8_cmesh_t8_gtest_cmesh_set_join_by_vertices_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_cmesh_t8_gtest_cmesh_set_join_by_vertices_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_schemes_t8_gtest_element_count_leafs_LDADD = $(t8_gtest_target_ld_add)
test_t8_schemes_t8_gtest_element_count_leafs_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_schemes_t8_gtest_element_count_leafs_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_schemes_t8_gtest_element_ref_coords_LDADD = $(t8_gtest_target_ld_add)
test_t8_schemes_t8_gtest_element_ref_coords_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_schemes_t8_gtest_element_ref_coords_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_geometry_t8_gtest_geometry_LDADD = $(t8_gtest_target_ld_add)
test_t8_geometry_t8_gtest_geometry_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_geometry_t8_gtest_geometry_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_schemes_t8_gtest_descendant_LDADD = $(t8_gtest_target_ld_add)
test_t8_schemes_t8_gtest_descendant_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_schemes_t8_gtest_descendant_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_schemes_t8_gtest_find_parent_LDADD = $(t8_gtest_target_ld_add)
test_t8_schemes_t8_gtest_find_parent_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_schemes_t8_gtest_find_parent_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_cmesh_t8_gtest_cmesh_face_is_boundary_LDADD = $(t8_gtest_target_ld_add)
test_t8_cmesh_t8_gtest_cmesh_face_is_boundary_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_cmesh_t8_gtest_cmesh_face_is_boundary_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_cmesh_t8_gtest_cmesh_partition_LDADD = $(t8_gtest_target_ld_add)
test_t8_cmesh_t8_gtest_cmesh_partition_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_cmesh_t8_gtest_cmesh_partition_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_forest_t8_gtest_element_volume_LDADD = $(t8_gtest_target_ld_add)
test_t8_forest_t8_gtest_element_volume_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_forest_t8_gtest_element_volume_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_cmesh_t8_gtest_multiple_attributes_LDADD = $(t8_gtest_target_ld_add)
test_t8_cmesh_t8_gtest_multiple_attributes_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_cmesh_t8_gtest_multiple_attributes_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_schemes_t8_gtest_successor_LDADD = $(t8_gtest_target_ld_add)
test_t8_schemes_t8_gtest_successor_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_schemes_t8_gtest_successor_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_forest_t8_gtest_search_LDADD = $(t8_gtest_target_ld_add)
test_t8_forest_t8_gtest_search_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_forest_t8_gtest_search_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_gtest_netcdf_linkage_LDADD = $(t8_gtest_target_ld_add)
test_t8_gtest_netcdf_linkage_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_gtest_netcdf_linkage_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_forest_t8_gtest_element_general_function_LDADD = $(t8_gtest_target_ld_add)
test_t8_forest_t8_gtest_element_general_function_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_forest_t8_gtest_element_general_function_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_gtest_vtk_linkage_LDADD = $(t8_gtest_target_ld_add)
test_t8_gtest_vtk_linkage_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_gtest_vtk_linkage_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_data_t8_gtest_shmem_LDADD = $(t8_gtest_target_ld_add)
test_t8_data_t8_gtest_shmem_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_data_t8_gtest_shmem_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_forest_t8_gtest_half_neighbors_LDADD = $(t8_gtest_target_ld_add)
test_t8_forest_t8_gtest_half_neighbors_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_forest_t8_gtest_half_neighbors_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_forest_t8_gtest_find_owner_LDADD = $(t8_gtest_target_ld_add)
test_t8_forest_t8_gtest_find_owner_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_forest_t8_gtest_find_owner_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_schemes_t8_gtest_face_descendant_LDADD = $(t8_gtest_target_ld_add)
test_t8_schemes_t8_gtest_face_descendant_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_schemes_t8_gtest_face_descendant_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_geometry_t8_gtest_point_inside_LDADD = $(t8_gtest_target_ld_add)
test_t8_geometry_t8_gtest_point_inside_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_geometry_t8_gtest_point_inside_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_forest_t8_gtest_user_data_LDADD = $(t8_gtest_target_ld_add)
test_t8_forest_t8_gtest_user_data_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_forest_t8_gtest_user_data_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_forest_t8_gtest_transform_LDADD = $(t8_gtest_target_ld_add)
test_t8_forest_t8_gtest_transform_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_forest_t8_gtest_transform_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_forest_t8_gtest_ghost_exchange_LDADD = $(t8_gtest_target_ld_add)
test_t8_forest_t8_gtest_ghost_exchange_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_forest_t8_gtest_ghost_exchange_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_forest_t8_gtest_ghost_exchange_stdvector_LDADD = $(t8_gtest_target_ld_add)
test_t8_forest_t8_gtest_ghost_exchange_stdvector_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_forest_t8_gtest_ghost_exchange_stdvector_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_forest_t8_gtest_ghost_and_owner_LDADD = $(t8_gtest_target_ld_add)
test_t8_forest_t8_gtest_ghost_and_owner_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_forest_t8_gtest_ghost_and_owner_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_IO_t8_gtest_vtk_reader_LDADD = $(t8_gtest_target_ld_add)
test_t8_IO_t8_gtest_vtk_reader_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_IO_t8_gtest_vtk_reader_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_forest_incomplete_t8_gtest_permute_hole_LDADD = $(t8_gtest_target_ld_add)
test_t8_forest_incomplete_t8_gtest_permute_hole_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_forest_incomplete_t8_gtest_permute_hole_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_forest_incomplete_t8_gtest_recursive_LDADD = $(t8_gtest_target_ld_add)
test_t8_forest_incomplete_t8_gtest_recursive_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_forest_incomplete_t8_gtest_recursive_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_forest_incomplete_t8_gtest_iterate_replace_LDADD = $(t8_gtest_target_ld_add)
test_t8_forest_incomplete_t8_gtest_iterate_replace_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_forest_incomplete_t8_gtest_iterate_replace_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_forest_incomplete_t8_gtest_empty_local_tree_LDADD = $(t8_gtest_target_ld_add)
test_t8_forest_incomplete_t8_gtest_empty_local_tree_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_forest_incomplete_t8_gtest_empty_local_tree_CPPFLAGS = $(t8_gtest_target_cpp_flags)

test_t8_forest_incomplete_t8_gtest_empty_global_tree_LDADD = $(t8_gtest_target_ld_add)
test_t8_forest_incomplete_t8_gtest_empty_global_tree_LDFLAGS = $(t8_gtest_target_ld_flags)
test_t8_forest_incomplete_t8_gtest_empty_global_tree_CPPFLAGS = $(t8_gtest_target_cpp_flags)

# If we did not configure t8code with MPI we need to build Googletest
# without MPI support.
if !T8_ENABLE_MPI
test_t8_gtest_cmesh_bcast_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_nca_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_pyra_connectivity_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_face_neigh_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_geometry_t8_gtest_geometry_occ_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_gtest_eclass_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_gtest_vec_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_gtest_mat_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_gtest_refcount_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_gtest_occ_linkage_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_gtest_version_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_init_linear_id_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_gtest_basics_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_ancestor_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_cmesh_t8_gtest_hypercube_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_cmesh_t8_gtest_cmesh_copy_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_cmesh_t8_gtest_cmesh_set_join_by_vertices_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_element_count_leafs_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_element_ref_coords_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_geometry_t8_gtest_geometry_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_descendant_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_find_parent_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_cmesh_t8_gtest_cmesh_face_is_boundary_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_cmesh_t8_gtest_cmesh_partition_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_forest_t8_gtest_element_volume_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_cmesh_t8_gtest_multiple_attributes_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_successor_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_forest_t8_gtest_search_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_gtest_netcdf_linkage_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_forest_t8_gtest_element_general_function_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_gtest_vtk_linkage_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_data_t8_gtest_shmem_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_forest_t8_gtest_half_neighbors_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_forest_t8_gtest_find_owner_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_schemes_t8_gtest_face_descendant_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_geometry_t8_gtest_point_inside_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_forest_t8_gtest_user_data_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_forest_t8_gtest_transform_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_forest_t8_gtest_ghost_exchange_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_forest_t8_gtest_ghost_exchange_stdvector_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_forest_t8_gtest_ghost_and_owner_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_IO_t8_gtest_vtk_reader_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_forest_incomplete_t8_gtest_permute_hole_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_forest_incomplete_t8_gtest_recursive_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_forest_incomplete_t8_gtest_iterate_replace_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_forest_incomplete_t8_gtest_empty_local_tree_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
test_t8_forest_incomplete_t8_gtest_empty_global_tree_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
endif

# Build Googletest library
check_LTLIBRARIES = test/libgtest.la
test_libgtest_la_SOURCES = thirdparty/googletest-mpi/gtest/gtest-all.cc
test_libgtest_la_CPPFLAGS = -I$(top_srcdir)/thirdparty/googletest-mpi -std=c++11
# If we did not configure t8code with MPI we need to build Googletest
# without MPI support.
if !T8_ENABLE_MPI
test_libgtest_la_CPPFLAGS += $(t8_gtest_target_mpi_cpp_flags)
endif
test_libgtest_la_LDFLAGS = -pthread


TESTS += $(t8code_googletest_programs)
check_PROGRAMS += $(t8code_googletest_programs)
